// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 0 submissions 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_0"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={Infinity}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_1"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={Infinity}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Ungraded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_2"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={Infinity}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_0"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_1"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Ungraded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_2"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`render loading with null submissions 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`render loading with pending set 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`render multiple data points  1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_0"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={0.5}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Graded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_1"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={0.3333333333333333}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Ungraded
        </Text>
      </View>
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
    testID="submission_dial_2"
    underlayColor="#eeeeee00"
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Circle
            borderWidth={0}
            color="#00e0ff"
            formatText={[Function]}
            progress={0.16666666666666666}
            showsText={true}
            size={70}
            textStyle={
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-medium",
                "fontSize": 16,
              }
            }
            thickness={7}
            unfilledColor="#F5F5F5"
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
                "fontSize": 12,
                "fontWeight": "500",
                "marginTop": 8,
                "textAlign": "center",
              },
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Not Submitted
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;
